examples/errors/resolve_circular_dependency.orr
// Error E401: Circular dependency
// Phase: Resolver
//
// The file imports itself, creating a circular dependency.
// Expected: E401 circular dependency detected

library;

// ❌ Self-import creates a cycle
import "resolve_circular_dependency";
